k8s_files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
    nginx/version: "1.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
