k8s_files/objects.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blue
  labels:
     name: blue

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: blue
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      namespace: blue
      labels:
        app: nginx
        nginx/version: "IMAGE_TAG"
    spec:
      containers:
      - name: nginx
        image: 482720962971.dkr.ecr.us-east-1.amazonaws.com/ecr_images_from_jenkins:IMAGE_TAG
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue
  namespace: blue
spec:
  selector:
    app: nginx
    nginx/version: "IMAGE_TAG"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: blue
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Owner=Maxim_Manovitskiy,Name=Ingress-contr-load-balancer,ResourceName=ALB
  labels:
    app: nginx
    nginx/version: "IMAGE_TAG"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "nginx-service-blue"
              servicePort: 80
